load up bib with :format => :latex

--- a/test/data/sutton.bib
+++ b/test/data/sutton.bib
@@ -4,3 +4,9 @@
 	School = {University of Massachusetts},
 	Title = {Efficient Training Methods for Conditional Random Fields},
 	Year = {2008}}
+
+@inproceedings{nelson08spam,
+	Author = {Blaine Nelson and Marco Barreno and Fuching Jack Chi and Anthony~D. Joseph and Benjamin~I.~P. Rubinstein and Udam Saini and Charles Sutton and J.~D. Tygar and Kai Xia},
+	Booktitle = {Proceedings of the First {USENIX} Workshop on Large-Scale Exploits and Emergent Threats ({LEET})},
+	Title = {Exploiting Machine Learning to Subvert your Spam Filter},
+	Year = {2008}}
