--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= BibOut -- 
+= BibOut 
 
 This package contains BibOut, a simple tool to convert BibTeX
 files into HTML or other types of formatted text files.
@@ -46,8 +46,9 @@ Call this file +template.tmpl+
         <html>
           <body>
             <ol>
-              <%- bib.each do |entry| -%>
-              <li><%= entry.year %><% entry.author.pretty %></li>
+              <% bib.each do |entry| %>
+              <li><%= entry.year %>. <%= entry.author.pretty %></li>
+              <% end %>
             </ol>
            </body>
          </html>
@@ -56,12 +57,30 @@ Finally, you can run bibout using
 
    % ls
    template.tmpl  mine.bib
-   % bibout -t mine.bib -o my-bib.html template.tmpl
+   % bibout -t template.tmpl -o my-bib.html mine.bib
 
-After running this command, the file my-byb.html will be created and will contain:
+After running this command, the file +my-bib.html+ will be created and will contain:
 
+  <html>
+    <body>
+      <ol>
+      
+        <li>1951. H. Robbins and S. Monro</li>
+      
+        <li>1953. N. Metropolis, A. Rosenbluth, M. Rosenbluth, A. Teller and E. Teller</li>
+      
+      </ol>
+     </body>
+  </html>
 
-Type +bibout --help+ for more information about the command-line invocation
+Type + bibout --help + for more information about the command-line invocation.
+
+== Create Template Files
+
+To use BibOut, the biggest thing that you need to do is to create the template file.
+The template file can contain arbitrary text and Ruby code.
+For more documentation about templates, including examples,
+see this {page about templates}[templates.html]
 
 == Development
 
